color token image

--- a/src/pages/guidelines/color/overview.mdx
+++ b/src/pages/guidelines/color/overview.mdx
@@ -326,6 +326,14 @@ themes easily.
 See the [color usage tab](/guidelines/color/usage) for the full list of color
 tokens.
 
+<Row>
+<Column colLg={12}>
+
+![Color token example](images/color-overview-tokens.png)
+
+</Column>
+</Row>
+
 ### Color roles
 
 The systematic and consistent use of color is achieved by applying tokens based
