--- a/src/pages/guidelines/color/overview.mdx
+++ b/src/pages/guidelines/color/overview.mdx
@@ -359,7 +359,7 @@ The color layering model for interaction tokens is as follows:
 <Row>
 <Column colLg={12}>
 
-![Hover states palette](images/color-overview-interactive-hover-2.png)
+![Hover states palette](images/color-overview-interactive.png)
 
 </Column>
 </Row>
@@ -392,14 +392,17 @@ hover, the text switches to `$text-primary` and the background to
 `$layer-hover`.
 
 <Row>
-<Column colLg={12}>
+<Column colLg={8}>
 
-![Hover states example](images/color-overview-interactive-hover-3.png)
+![Hover state colors are half steps](images/color-overview-interactive-hover.png)
 
 </Column>
 </Row>
 
-<Caption>Enabled color (1) and hover color (2).</Caption>
+<Caption>
+  Shown in the white theme, `$layer` enabled color (1) and `$layer-hover` hover
+  color (2).
+</Caption>
 
 <br />
 
@@ -418,14 +421,17 @@ The exceptions are that White value shares the same active state as Gray 10
 value, and Black value shares the same active state as Gray 100 value.
 
 <Row>
-<Column colLg={12}>
+<Column colLg={8}>
 
-![Active states](images/color-overview-interactive-active-3.png)
+![Active state colors are two steps over](images/color-overview-interactive-active.png)
 
 </Column>
 </Row>
 
-<Caption>Enabled color (1) and active color (2).</Caption>
+<Caption>
+  Shown in the white theme, `$button-primary` enabled color (1) and
+  `$button-primary-active` active color (2).
+</Caption>
 
 <br />
 
@@ -444,14 +450,17 @@ The exception is that White shares the same selected state as Gray 10, and Black
 shares the same selected state as Gray 100.
 
 <Row>
-<Column colLg={12}>
+<Column colLg={8}>
 
-![Selected states](images/color-overview-interactive-selected-3.png)
+![Selected state colors are one step over](images/color-overview-interactive-selected.png)
 
 </Column>
 </Row>
 
-<Caption>Enabled color (1) and selected color (2).</Caption>
+<Caption>
+  Shown in the white theme, `$layer` enabled color (1) and `$layer-selected`
+  selected color (2).
+</Caption>
 
 <br />
 
@@ -474,12 +483,16 @@ contrast accessibility. Often times to achieve proper 3:1 contrast a
 `$focus-inset` border is used between the focus border and the element itself.
 
 <Row>
-<Column colLg={12}>
+<Column colLg={8}>
 
-![Focus states](images/color-overview-interactive-focus-03.png)
+![Focus state colors](images/color-overview-interactive-focus.png)
 
 </Column>
 </Row>
+
+<Caption>
+  White theme `$focus` color (1) and Gray 90 theme `$focus` color (2).
+</Caption>
 
 <br />
 
