removed unused images

--- a/src/pages/guidelines/color/overview.mdx
+++ b/src/pages/guidelines/color/overview.mdx
@@ -400,8 +400,8 @@ hover, the text switches to `$text-primary` and the background to
 </Row>
 
 <Caption>
-  Shown in the white theme, `$layer` enabled color (1) and `$layer-hover` hover
-  color (2).
+  Shown in the white theme, (1) `$layer` enabled color and (2) `$layer-hover`
+  hover color.
 </Caption>
 
 <br />
@@ -429,8 +429,8 @@ value, and Black value shares the same active state as Gray 100 value.
 </Row>
 
 <Caption>
-  Shown in the white theme, `$button-primary` enabled color (1) and
-  `$button-primary-active` active color (2).
+  Shown in the white theme, (1) `$button-primary` enabled color and (2)
+  `$button-primary-active` active color.
 </Caption>
 
 <br />
@@ -458,8 +458,8 @@ shares the same selected state as Gray 100.
 </Row>
 
 <Caption>
-  Shown in the white theme, `$layer` enabled color (1) and `$layer-selected`
-  selected color (2).
+  Shown in the white theme, (1) `$layer` enabled color and (2) `$layer-selected`
+  selected color.
 </Caption>
 
 <br />
@@ -491,7 +491,7 @@ contrast accessibility. Often times to achieve proper 3:1 contrast a
 </Row>
 
 <Caption>
-  White theme `$focus` color (1) and Gray 90 theme `$focus` color (2).
+  (1) White theme `$focus` color and (2) Gray 90 theme `$focus` color.
 </Caption>
 
 <br />
