--- a/src/pages/components/accordion/usage.mdx
+++ b/src/pages/components/accordion/usage.mdx
@@ -8,7 +8,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 <PageDescription>
 
-THE accordion is a vertically stacked list of headers that reveal or hide
+The accordion is a vertically stacked list of headers that reveal or hide
 associated sections of content.
 
 </PageDescription>
