Apply suggestions from code review
Co-authored-by: Josh Black <josh@josh.black>

--- a/src/pages/guidelines/color/overview.mdx
+++ b/src/pages/guidelines/color/overview.mdx
@@ -38,7 +38,7 @@ harmony through our User Interface design.
 
 Application of the color palette brings a unified and recognizable consistency
 to IBM's array of digital products and interfaces. This consistency is grounded
-by a set of well-defined rules on how to work with the Carbon component library
+by a set of well-defined rules on how to work with Carbon
 in the context of dark and light themes.
 
 A set of well-defined rules about how to work with the Carbon component library
@@ -271,7 +271,7 @@ All of the themes are available in
 
 In some cases, it is helpful to apply light components to dark backgrounds or
 dark components to light backgrounds. This technique is useful to focus
-attention or create visual tension. Some high contrast moments are backed into
+attention or create visual tension. Some high contrast moments are baked into
 the themes used `inverse` tokens, like with the tooltip component. Other times
 high contrast moments can be achieved through applying inline theming for
 instances like a dark UI Shell Header with a light theme page.
