--- a/src/pages/developing/react-tutorial/step-3.mdx
+++ b/src/pages/developing/react-tutorial/step-3.mdx
@@ -318,7 +318,7 @@ for the time being. If there's an issue, we'll render the corresponding error
 message.
 
 Finally, if neither of those are true, it means we have our data! One nice
-advantage of GraphQL is that as long as there are no errors, we can be certain
+advantage of GraphQL is that as long as there are no errors, we can be certain that
 the properties on the data we requested aren't `undefined`.
 
 We need to render the `RepoTable` in `Query`'s `return()` statement once the
