update tab usage v11
updating anchor links, overview, when and when not to use, added images

--- a/src/pages/components/tabs/usage.mdx
+++ b/src/pages/components/tabs/usage.mdx
@@ -8,8 +8,8 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 <PageDescription>
 
-Use tabs to allow users to navigate easily between views within the same
-context.
+Tabs are used to organize related content. They allow the user to navigate
+between groups of information that appear within the same context.
 
 </PageDescription>
 
@@ -18,22 +18,55 @@ context.
 <AnchorLink>Overview</AnchorLink>
 <AnchorLink>Live demo</AnchorLink>
 <AnchorLink>Formatting</AnchorLink>
-<AnchorLink>Variants</AnchorLink>
+<AnchorLink>Content</AnchorLink>
+<AnchorLink>Behaviors</AnchorLink>
+<AnchorLink>Related</AnchorLink>
+<AnchorLink>References</AnchorLink>
 <AnchorLink>Feedback</AnchorLink>
 
 </AnchorLinks>
 
 ## Overview
 
-Tabs are used to quickly navigate between views within the same context.
+Tabs are used to group different but related content, allowing users to navigate
+views without leaving the page. They always contain at least two items and one
+tab is active at a time. Tabs can be used on full page layouts or in components
+such as modals, cards, or side panels.
 
 <Row>
-<Column colLg={8}>
+<Column colLg={12}>
 
 ![An example of tabs being used.](images/tab-usage-1.png)
 
 </Column>
 </Row>
+
+### When to use
+
+- Use tabs to group related information into different categories, helping to
+  reduce cognitive load.
+- Tabs can be used to organize content such as forms, settings, and dashboards
+  so a user does not have to navigate away from their workflow to complete their
+  task.
+
+      <Row>
+
+  <Column colLg={8}>
+
+![An example of tabs being used.](images/tab-usage-2.png)
+
+</Column>
+</Row>
+
+## When not to use
+
+- Tabs should never be used for primary navigation. If tabs become too complex,
+  consider using a standard navigation pattern.
+- Tabs should not be used to indicate progress. Use the progress indicator
+  instead.
+- Tabs should not be used if the user is comparing information in two groups, as
+  this would result in the user having to click back and forth to complete a
+  task.
 
 ## Live demo
 
