--- a/src/pages/components/tabs/usage.mdx
+++ b/src/pages/components/tabs/usage.mdx
@@ -36,7 +36,7 @@ such as modals, cards, or side panels.
 <Row>
 <Column colLg={12}>
 
-![An example of tabs being used.](images/tab-usage-1.png)
+![An example of tabs being used.](images/tabs-usage-1.png)
 
 </Column>
 </Row>
@@ -52,12 +52,12 @@ such as modals, cards, or side panels.
 <Row>
 <Column colLg={8}>
 
-![An example of tabs being used.](images/tab-usage-2.png)
+![tab thumbnail.](images/tab-usage-2.png)
 
 </Column>
 </Row>
 
-## When not to use
+### When not to use
 
 - Tabs should never be used for primary navigation. If tabs become too complex,
   consider using a standard navigation pattern.
@@ -66,6 +66,23 @@ such as modals, cards, or side panels.
 - Tabs should not be used if the user is comparing information in two groups, as
   this would result in the user having to click back and forth to complete a
   task.
+
+### Variants
+
+| Variant     | Purpose                                                                                                                                                                                   |
+| ----------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| _Line_      | A standalone tab that can also be nested within components. It is commonly used within components or for content using the entire page for layout, not connected to any other components. |
+| _Contained_ | An emphasized tab that is always attached to a background container. It is commonly used for defined content areas, like sub-pages or attached to cards.                                  |
+
+<Row>
+<Column colLg={8}>
+
+![Examples of line tabs (top) and contained tabs (bottom)](images/tab-usage-3.png)
+
+</Column>
+</Row>
+
+<Caption>Examples of line tabs (top) and contained tabs (bottom)</Caption>
 
 ## Live demo
 
@@ -124,44 +141,322 @@ such as modals, cards, or side panels.
 
 ## Formatting
 
-#### Tab label
+The tab component consists of two distinct zones: selected and unselected. There
+are always at least two tabs and one is selected by default. Icons are optional
+in contained tabs.
 
-Each tab label describes the content contained within it. Labels are concise and
-use no more than two words. Keep in mind that at mobile widths and during
-translation, the character length of a label will impact the experience. Do not
-use icons in tab labels.
-
-#### Number of tabs
-
-In most scenarios, you should use no more than six tabs. This maintains an
-uncluttered UI and reduces cognitive load for users. If more than six tabs are
-needed, consider other navigation patterns, such as a
-[side-nav](/components/UI-shell-left-panel/usage).
-
-#### Order
-
-Tab order should be consistent across an experience. Tabs with related content
-should be grouped adjacent to each other.
-
-## Variants
-
-There are two variations of tabs, default and container. They are hierarchically
-the same and should never be nested within each other.
-
-| Variant     | Purpose                                                                                                                                       |
-| ----------- | --------------------------------------------------------------------------------------------------------------------------------------------- |
-| _Default_   | A standalone tab that can also be nested within components. It is commonly used with smaller content areas.                                   |
-| _Container_ | An emphasized tab that is always paired with an attached background container. It is commonly used for larger content areas, like sub-pages.  |
+### Anatomy of line tabs
 
 <Row>
 <Column colLg={8}>
 
-![An example of container tabs on the left and default tabs on the right.](images/tab-usage-2.png)
+![Examples of line tabs (top) and contained tabs (bottom)](images/tab-usage-4.png)
 
 </Column>
 </Row>
 
-<Caption>Left: container tab. Right: default tab .</Caption>
+<Row>
+<Column colSm={2} colMd={4} colLg={4}>
+
+#### 1. Line tabs
+
+A. Label <br /> B. Indicator <br />
+
+#### 3. Line tabs with icon
+
+A. Label <br /> B. Indicator <br /> C. Icon
+
+</Column>
+<Column colSm={2} colMd={4} colLg={4}>
+
+#### 2. Icon-only line tabs
+
+B. Indicator <br /> C. Icon
+
+</Column>
+</Row>
+
+### Anatomy of contained tabs
+
+<Row>
+<Column colLg={8}>
+
+![Examples of line tabs (top) and contained tabs (bottom)](images/tab-usage-5.png)
+
+</Column>
+</Row>
+
+<Row>
+<Column colSm={2} colMd={4} colLg={4}>
+
+#### 1. Contained tabs
+
+A. Label <br /> B. Indicator <br /> D. Container
+
+#### 3. Contained tabs with icon and secondary label
+
+A. Label <br /> B. Indicator <br /> C. Icon (optional) <br /> D. Container
+
+<br /> E. Secondary label (optional)
+
+</Column>
+<Column colSm={2} colMd={4} colLg={4}>
+
+#### 2. Contained tab with icons only
+
+B. Indicator <br /> C. Icon <br /> D. Container
+
+</Column>
+</Row>
+
+### Alignment
+
+Much like
+[buttons](https://www.carbondesignsystem.com/components/button/usage/#alignment),
+alignment of tabs depend on where they appear and whether or not they're
+contained within another component. As a general rule, the first label for both
+line tabs and contained tabs align with the grid and the text below. If tabs are
+within another component, such as a card, follow the grid that you are using
+inside the component and align the label with text in the component.
+
+<DoDontRow>
+  <DoDont caption="Do align tab labels with the grid">
+
+![Do left-align text in a button, even if the button is wide.](images/tab-usage-6-do.png)
+
+  </DoDont>
+  <DoDont type="dont" caption="Do not align tab container with the grid">
+
+![Do not center text in a button, even if the button is wide.](images/tab-usage-6-dont.png)
+
+  </DoDont>
+</DoDontRow>
+
+#### Auto-width
+
+With both line tabs and contained tabs, auto-width is the default behavior. Each
+tab will be a different size depending on the label's character count but will
+have have consistent padding on each side of the label. The first label,
+selected by default, should align to the grid. Where the tabs end will vary and
+may not end on the grid. If needed, you may also use a rule to help balance tabs
+with other components on the page.
+
+<Row>
+<Column colLg={12}>
+
+![Examples of line tabs (top) and contained tabs (bottom)](images/tab-usage-7.png)
+
+</Column>
+</Row>
+
+<Caption>Example of auto-width line tabs using a rule</Caption>
+
+#### Aligning to grid columns
+
+Instead of using the default auto-width behavior, contained tabs also have the
+option to align to the grid. As a group, the tabs span a set of columns with
+each tab being equal in size. The first tab’s label should align to the first
+column you are using with the last tab in the group always ending at a column’s
+edge. The tabs in between will flow accordingly and may or may not align to the
+grid but will always be the same size.
+
+Use the
+[2x grid](https://www.carbondesignsystem.com/guidelines/2x-grid/overview#2x-grid-fundamentals)
+to drive visual rhythm by spacing content in multiples of two columns and
+aligning the beginning and ending of the tab elements with content below the
+tabs when possible.
+
+<Row>
+<Column colLg={12}>
+
+![Examples of line tabs (top) and contained tabs (bottom)](images/tab-usage-8.png)
+
+</Column>
+</Row>
+
+<Caption>Example of contained tabs using the grid</Caption>
+
+#### Alignment within a component
+
+When using line tabs within a component (like a modal) the first label should
+always align to the other content in the space. Do not use contained tabs. The
+edges of the line tab may also bleed to the edges of the space if needed
+depending on the containers margins. To add hierarchical clarity and balance the
+tabs with the other content, a line may be added from the end of the last tab to
+edge of the content area.
+
+<Row>
+<Column colLg={8}>
+
+![Examples of line tabs (top) and contained tabs (bottom)](images/tab-usage-9.png)
+
+</Column>
+</Row>
+
+<Caption>Example of contained tabs using the grid</Caption>
+
+## Content
+
+### Main elements
+
+#### Labels
+
+- Use short tab labels that are clear and specific. Labels should be one to two
+  words, as these are easier to scan.
+- Text labels should clearly communicate the view users will see and the content
+  contained in the view.
+
+#### Secondary labels
+
+- Contained tabs can have secondary labels to add clarity or assist the user in
+  choosing the right selection.
+
+### Further guidance
+
+For further content guidance, see Carbon's
+[content guidelines](/guidelines/content/general).
+
+## Behaviors
+
+### States
+
+Tabs allow for three states: **selected, unselected,** and **disabled**. The
+default view is that one tab is preselected and is usually the first tab. Only
+one tab can be selected at a time. When a user chooses a new item, the previous
+tab is automatically deselected. If a user navigates away from a tab, a user
+should return to the last tab selected.
+
+<Row>
+<Column colLg={8}>
+
+![Examples of line tabs (top) and contained tabs (bottom)](images/tab-usage-10.png)
+
+</Column>
+</Row>
+
+<Caption>
+  Example of selected, unselected, and diabled states in line tabs (top) and
+  contained tabs (bottom)
+</Caption>
+
+For detailed visual information about the various states for this component, see
+the [Style tab](https://carbondesignsystem.com/components/tabs/style).
+
+### Scrollable
+
+When your page requires more tabs that can fit or needs to adapt to a new
+browser size, tabs should become scrollable. Left and right arrows appear to
+help navigate the user through tabs that might be off page.
+
+<Row>
+<Column colLg={8}>
+
+![Examples of line tabs (top) and contained tabs (bottom)](images/tab-usage-11.png)
+
+</Column>
+</Row>
+
+<Caption>
+  Example of scrolling in line tabs (top) and contained tabs (bottom)
+</Caption>
+
+### Interactions
+
+#### Mouse
+
+Users can trigger a state change by clicking anywhere in the container area.
+
+#### Keyboard
+
+One tab should be selected by default. Users can navigate between tabs by
+pressing right or left arrow keys. For additional keyboard interactions, see the
+[Accessibility tab](https://carbondesignsystem.com/components/tabs/accessibility).
+
+#### Screenreader
+
+VoiceOver: Users can navigate between tabs by pressing right or left arrow keys.
+
+JAWS: Users can navigate between tabs by pressing right or left arrow keys.
+
+NVDA: Users can navigate between tabs by pressing right or left arrow keys.
+
+For additional information, see screen reader tests.
+
+## Modifiers
+
+### Tabs with icons
+
+You may use icons in either line or contained tabs. Icons are always pinned to
+the right of the tab and do not appear above, below, or to the left of the
+label.
+
+<Row>
+<Column colLg={8}>
+
+![Examples of tabs with icons](images/tab-usage-12.png)
+
+</Column>
+</Row>
+
+### Icon-only tabs
+
+You may use icon-only tabs with both line and contained tabs. Icons must be
+easily recognized and globally accepted. These work best in small, defined
+spaces and in components. Always use a tool tip for an icon description on hover
+to add clarity.
+
+<Row>
+<Column colLg={8}>
+
+![Example of icon-only tabs within a side panel](images/tab-usage-13.png)
+
+</Column>
+</Row>
+
+### Secondary labels
+
+Contained tabs that align with the grid allow for a secondary label. Do not use
+secondary labels with line tabs or auto-width contained tabs.
+
+<Row>
+<Column colLg={8}>
+
+![Example of tabs with a secondary label](images/tab-usage-14.png)
+
+</Column>
+</Row>
+
+## Related
+
+#### Content switcher versus tabs
+
+[Content switchers](https://www.carbondesignsystem.com/components/content-switcher/usage/)
+allow users to compare and toggle between alternate views of similar or related
+content. Content that is grouped into tabs is part of the same bigger context
+but the content does not overlap.
+
+#### Navigation versus tabs
+
+Tabs should not be used for common navigation patterns. If your tab arrangements
+are becoming too complex with different levels of content, consider using
+[left](https://www.carbondesignsystem.com/components/UI-shell-left-panel/usage/)
+or
+[right](https://www.carbondesignsystem.com/components/UI-shell-right-panel/usage/)
+UI panels, possibly in conjunction with breadcrumbs, to help the user through
+the content.
+
+#### Progress indicator versus tabs
+
+[Progress indicator](https://www.carbondesignsystem.com/components/progress-indicator/usage/)
+content moves in a logical progression, showing next steps to guide the user
+through the completion of a task. Tabs organize content into groups that the
+user can navigate through; they do not support progressive tasks.
+
+## References
+
+Jakob Nielson,
+[Tabs, Used Right](https://www.nngroup.com/articles/tabs-used-right/) (Nielsen
+Norman Group, 2016)
 
 ## Feedback
 
