--- a/src/pages/components/tabs/usage.mdx
+++ b/src/pages/components/tabs/usage.mdx
@@ -150,7 +150,7 @@ in contained tabs.
 <Row>
 <Column colLg={8}>
 
-![Examples of line tabs (top) and contained tabs (bottom)](images/tab-usage-4.png)
+![Anatomy of line tabs](images/tab-usage-4.png)
 
 </Column>
 </Row>
@@ -181,7 +181,7 @@ B. Indicator <br /> C. Icon
 <Row>
 <Column colLg={8}>
 
-![Examples of line tabs (top) and contained tabs (bottom)](images/tab-usage-5.png)
+![Anatomy of contained tabs](images/tab-usage-5.png)
 
 </Column>
 </Row>
@@ -195,9 +195,8 @@ A. Label <br /> B. Indicator <br /> D. Container
 
 #### 3. Contained tabs with icon and secondary label
 
-A. Label <br /> B. Indicator <br /> C. Icon (optional) <br /> D. Container
-
-<br /> E. Secondary label (optional)
+A. Label <br /> B. Indicator <br /> C. Icon (optional) <br /> D. Container<br />
+E. Secondary label (optional)
 
 </Column>
 <Column colSm={2} colMd={4} colLg={4}>
@@ -222,12 +221,12 @@ inside the component and align the label with text in the component.
 <DoDontRow>
   <DoDont caption="Do align tab labels with the grid">
 
-![Do left-align text in a button, even if the button is wide.](images/tab-usage-6-do.png)
+![Do align tab labels with the grid](images/tab-usage-6-do.png)
 
   </DoDont>
   <DoDont type="dont" caption="Do not align tab container with the grid">
 
-![Do not center text in a button, even if the button is wide.](images/tab-usage-6-dont.png)
+![Do not align tab container with the grid](images/tab-usage-6-dont.png)
 
   </DoDont>
 </DoDontRow>
@@ -244,7 +243,7 @@ with other components on the page.
 <Row>
 <Column colLg={12}>
 
-![Examples of line tabs (top) and contained tabs (bottom)](images/tab-usage-7.png)
+![Autowidth tabs](images/tab-usage-7.png)
 
 </Column>
 </Row>
@@ -269,7 +268,7 @@ tabs when possible.
 <Row>
 <Column colLg={12}>
 
-![Examples of line tabs (top) and contained tabs (bottom)](images/tab-usage-8.png)
+![Aligning to grid columns](images/tab-usage-8.png)
 
 </Column>
 </Row>
@@ -288,12 +287,12 @@ edge of the content area.
 <Row>
 <Column colLg={8}>
 
-![Examples of line tabs (top) and contained tabs (bottom)](images/tab-usage-9.png)
+![Contained tabs within a component](images/tab-usage-9.png)
 
 </Column>
 </Row>
 
-<Caption>Example of contained tabs using the grid</Caption>
+<Caption>ALigning tabs within a component</Caption>
 
 ## Content
 
@@ -329,7 +328,7 @@ should return to the last tab selected.
 <Row>
 <Column colLg={8}>
 
-![Examples of line tabs (top) and contained tabs (bottom)](images/tab-usage-10.png)
+![Tab states](images/tab-usage-10.png)
 
 </Column>
 </Row>
@@ -351,7 +350,7 @@ help navigate the user through tabs that might be off page.
 <Row>
 <Column colLg={8}>
 
-![Examples of line tabs (top) and contained tabs (bottom)](images/tab-usage-11.png)
+![Scrollable tabs](images/tab-usage-11.png)
 
 </Column>
 </Row>
